# Application_generator

./: .gitignore  README.md  install_dependencies.sh  pyproject.toml  requirements.txt  run.sh  run_app.py
.streamlit/: secrets.toml.example
app/: __init__.py  config.py  main.py  streamlit_app.py
app/generator/: generator.py
app/schema/: letter_schema.py
app/tools/: file_manager.py  scraper.py
app/utils/: language_detector.py  models.py  prompts.py  simple_pdf_generator.py  text_processor.py
