[tool.poetry]
name = "ai-cover-letter-generator"
version = "1.0.0"
description = "AI-powered cover letter generator for job applications with multilingual support"
authors = ["Rayan Benaissa <rayanbenaissa@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain-groq = "^0.3.6"
langchain-core = "^0.3.69"
langchain-community = "^0.3.27"
python-dotenv = "^1.0.1"
pydantic = "^2.10.1"
beautifulsoup4 = "^4.12.3"
langchain = "^0.3.26"
requests = "^2.32.3"
pdfplumber = "^0.11.7"
reportlab = "^4.0.0"
streamlit = "^1.29.0"

[tool.poetry.group.dev.dependencies]
loguru = "^0.7.3"
langsmith = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"